src/test/test-models/bad/redefine-prob2.stan
functions {
  real poisson_lpmf(int n, real x) {
    return -x^2;
  }
}
parameters {
  real y;
}
model {
  y ~ normal(0, 1);
}
